[package]
name = "logprob"
version = "0.2.0"
authors = ["Michael Goodale"]
edition = "2021"
description = "A wrapper around floats to handle log probabilities"
readme = "README.md"
repository = "https://github.com/michaelgoodale/logprob/"
license = "MIT OR Apache-2.0"
keywords = [
  "probability",
  "scientific-computing",
  "machine-learning",
  "f64",
  "float",
]
categories = ["science", "simulation", "mathematics"]

[dependencies]
num-traits = "0.2.19"
serde = { version = "1.0.219", features = ["serde_derive"] }

[dev-dependencies]
divan = "0.1"
anyhow = "1.0"
approx = "0.5.1"
rand = "0.9"
rand_chacha = "0.9"

[[bench]]
name = "allocating_log_sum_exp"
harness = false
