[package]
name = "logprob"
version = "0.2.1"
authors = ["Michael Goodale"]
edition = "2021"
description = "A wrapper around floats to handle log probabilities"
readme = "README.md"
repository = "https://github.com/michaelgoodale/logprob/"
license = "MIT OR Apache-2.0"
keywords = [
  "probability",
  "scientific-computing",
  "machine-learning",
  "f64",
  "float",
  "no_std",
]
categories = ["science", "simulation", "mathematics"]

[dependencies]
num-traits = { version = "^0.2.19", features = [
  "libm",
], default-features = false }
serde = { version = "^1.0.228", features = ["serde_derive"], optional = true }


[dev-dependencies]
divan = "0.1"
anyhow = "1.0"
approx = "0.5.1"
rand = "0.10"
rand_chacha = "0.10"

[features]
default = ["std"]

alloc = []
std = ["alloc"]
serde = ["dep:serde", "std"]

[[bench]]
name = "allocating_log_sum_exp"
harness = false
